--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ JWT_SECRET=your_jwt_secret_key
 NODE_ENV=development
 VEXABOT_API_URL=https://dev.vexabot.ai
 TTS_STT_WEB_SCRAPING_API_URL=http://3.17.156.5:5678/
+CLIENT_URL=http://localhost:4200
